# stratum

./: .gitattributes  .gitignore
.github/workflows/: ci.yml  security.yml
benchmarks/: README.md
benchmarks/harness/: coordinated_omission.py  main.py  pyproject.toml  runner.py  statistics.py
benchmarks/results/: gateway_baseline_round_robin_2026-06-19_3daedcfc.parquet  gateway_baseline_round_robin_2026-06-19_3daedcfc_meta.json  gateway_dispatch_round_robin_baseline_2026-07-12_2ab3946a.parquet  gateway_dispatch_round_robin_baseline_2026-07-12_2ab3946a_meta.json  gateway_dispatch_round_robin_baseline_2026-07-12_4eaf292e.parquet  gateway_dispatch_round_robin_baseline_2026-07-12_4eaf292e_meta.json  gateway_dispatch_round_robin_baseline_2026-07-12_7ef8f29d.parquet  gateway_dispatch_round_robin_baseline_2026-07-12_7ef8f29d_meta.json  gateway_dispatch_round_robin_baseline_2026-07-12_feb6ab54.parquet  gateway_dispatch_round_robin_baseline_2026-07-12_feb6ab54_meta.json
benchmarks/scenarios/: gateway_baseline.yaml  gateway_dispatch_round_robin_baseline.yaml
crates/: Cargo.toml
crates/stratum-chaos/: Cargo.toml
crates/stratum-chaos/src/: main.rs
crates/stratum-gateway/: Cargo.toml  build.rs
crates/stratum-gateway/src/: ingress.rs  lib.rs  main.rs  proto.rs  rate_limit.rs  signing.rs  sla.rs  telemetry.rs
crates/stratum-raft/: Cargo.toml
crates/stratum-replay/: Cargo.toml
crates/stratum-replay/src/: event_log.rs  lib.rs  logical_clock.rs  main.rs
crates/stratum-replay/tests/: replay_determinism.rs
crates/stratum-router/: Cargo.toml
crates/stratum-router/src/: backpressure.rs  bandit.rs  cache_hit_index.rs  consistent_hash.rs  embedding.rs  http_signals_provider.rs  lib.rs  main.rs  router.rs  scoring.rs  semantic_router.rs  worker_registry.rs
crates/stratum-scheduler/: Cargo.toml
crates/stratum-scheduler/src/: main.rs
docs/adr/: ADR-001-protox-over-protobuf-src.md  ADR-002-internal-vs-proto-sla-class-separation.md  ADR-003-replay-key-signed-from-raw-bytes.md  ADR-004-tracing-before-otlp.md  ADR-005-redb-over-lmdb.md  ADR-007-kv-pressure-prediction-horizon.md  ADR-008-ivf-pq-upgrade-path.md  ADR-009-cache-hit-prob-local-computation.md
docs/rfc/: RFC-001-causal-observability.md
docs/runbooks/: gateway-dev-setup.md
infra/compose/: docker-compose.yml
infra/nix/: flake.nix
protos/stratum/v1/: causal.proto  (+1 more)
services/cache-oracle/: pyproject.toml
services/cache-oracle/src/stratum_oracle/: api.py  cache_hit_index.py  collector.py  embedding.py  predictor.py
services/cache-oracle/tests/: test_api.py  test_cache_hit_index.py  test_embedding.py  test_predictor_accuracy.py
services/causal-observer/: go.mod
services/eval-fabric/: pyproject.toml
services/experiment-engine/: pyproject.toml
services/reliability-model/: pyproject.toml
services/synthgen/: pyproject.toml
(+2 files in other folders)
