[package]
name = "stratum-gateway"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
stratum-router = { path = "../stratum-router" }
stratum-replay = { path = "../stratum-replay" }

[build-dependencies]
prost-build = "0.13"
protox = "0.7"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1.6", features = ["v4"] }