[package]
name = "stratum-router"
version = "0.1.0"
edition = "2021"

[dependencies]
stratum-replay = { path = "../stratum-replay" }
uuid = { version = "1.6", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1"
