[project]
name = "stratum-cache-oracle"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "prometheus-client>=0.25.0",
    "starlette>=1.3.1",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stratum_oracle"]
